--- a/src/index.scss
+++ b/src/index.scss
@@ -2,5 +2,5 @@
 
 body {
   // background-color: rgb(27, 26, 26);
-  background-image: url('./app/images/marble.jpg');
+  background-image: url('./app/images/marble3.jpg');
 }
