--- a/src/app/components/FoodPhotosCarousel/FoodPhotosCarousel.scss
+++ b/src/app/components/FoodPhotosCarousel/FoodPhotosCarousel.scss
@@ -1,4 +1,9 @@
 img {
-    max-height: 80vh;
-    width: 100%;
+  &.pizza {
+    object-position: 50% 90%;
+  }
+  max-height: 80vh;
+  width: 100%;
+  object-fit: cover;
+  object-position: 50% 20%;
 }
