--- a/src/app/components/OrderForm/OrderForm.scss
+++ b/src/app/components/OrderForm/OrderForm.scss
@@ -1,3 +1,7 @@
 h3.summary {
-    background-color: rgb(184, 184, 184);
+    background-color: rgb(144, 144, 145);
 }
+
+label {
+    color: black;
+  }
