--- a/src/app/components/Main/Main.scss
+++ b/src/app/components/Main/Main.scss
@@ -3,6 +3,10 @@
   background-color: rgb(184, 184, 184);
 }
 
+.carousel-div {
+  height: 100vh;
+}
+
 .form {
   min-height: 100vh;
   background-image: url('../../images/marble-spoons.jpg');
