--- a/src/app/components/OfferDiv/OfferDiv.scss
+++ b/src/app/components/OfferDiv/OfferDiv.scss
@@ -1,3 +1,13 @@
-.plate img {
+@media only screen and (max-width: 600px) {
+  .plate img {
     border-radius: 50%;
+    width: 70%;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .plate img {
+    border-radius: 50%;
+    width: 100%;
+  }
 }
