--- a/src/app/components/2ndOrderFormSite/OptionCards.scss
+++ b/src/app/components/2ndOrderFormSite/OptionCards.scss
@@ -2,12 +2,18 @@
     object-fit: cover;
     min-height: 180px;
     &.choosed {
-      opacity: 0.6;
+      opacity: 0.7;
     }
   }
 
 .card {
   cursor: pointer;
+}
+
+.card:hover {
+  img {
+    opacity: 0.7
+  }
 }
 
 .card-title {
